--- a/inde.html
+++ b/inde.html
@@ -1,5 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+    <style> 
+        body {
+          width: 100px;
+          height: 100px;
+          background-color: red;
+          animation-name: example;
+          animation-duration: 4s;
+          animation-iteration-count: infinite;
+        }
+        
+        @keyframes example {
+          0% {background-color: red;}
+          20% {background-color: yellow;}
+          40% {background-color: rgb(0, 170, 255);}
+          60% {background-color: rgb(221, 112, 180);}
+          80% {background-color: rgb(191, 117, 57);}
+          100% {background-color: rgb(98, 241, 9);}
+        }
+        </style>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
